@@ -5,6 +5,7 @@
 [*] DictionaryUtils.GetValueOrDefault is only available for netstandard 1.6 and 2.0 .
 [+] Add LeftJoin collection extension.
 [+] Add ReadOnlySpan overloads for StringUtils.
+[+] Add parse or default methods for DateTimeOffset and DateOnly types.
 
 4.1.0 [2021-11-25]
 [+] Add .NET 5.0 target.
